# videoflow

./: .gitignore  BACKLOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  index.md
docs/guide/: audio.md  canvas.md  detect-scenes.md  reel.md
docs/reference/: api.md
examples/: beat_analysis.py  dc_metro.py  reel_from_folder.py  reel_with_chapters.py
src/videoflow/: __init__.py  _videoedit_bootstrap.py  analysis.py  audio.py  cli.py  generate.py  layout.py  mix.py  reel.py
tests/: test_analyze_beats.py  test_detect_scenes.py  test_generate.py  test_layout.py  test_mix.py  test_reel.py  test_serialisation.py
